--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"        />
 
+
     <!--Forgot Password option -->
     <TextView
         android:layout_width="wrap_content"
@@ -88,7 +89,9 @@
         android:text="Forgot Password?"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:clickable="true"/>
+
 
     <!--Create new account option-->
     <TextView
@@ -99,6 +102,7 @@
         android:text="Create New Account"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:clickable="true"/>
 
 </RelativeLayout>
